--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,12 +18,11 @@
                    placeholder="Enter Password" name="password" required="required">
         </label>
         <button type="submit">Login</button>
-        <div class="line">
-            <div><a href="/signup">Do you have no account? Sign up</a></div>
-            <div><input type="checkbox" name="remember">
-                Remember me
-            </div>
+        <div style="margin-bottom: 20px"><input type="checkbox" name="remember">
+            Remember me
         </div>
+        <div><a href="/signup">Do you have no account? Sign up</a></div>
+
     </div>
 </form>
 </body>
