--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -59,6 +59,7 @@
                 Female <input id="f" type="radio" th:field="*{gender}" value="female" required>
             </div>
         </div>
+        +
         <button type="submit" value="Sign up">Sign Up</button>
         <a href="/login">Do you have an account? Sign in</a>
     </div>
@@ -78,6 +79,7 @@
             }
         }
     </script>
+    <script type="application/javascript" src="js/register.js"></script>
 </form>
 </body>
 </html>
