--- a/src/main/resources/static/styles/items.css
+++ b/src/main/resources/static/styles/items.css
@@ -1,38 +1,86 @@
 @charset "UTF-8";
 
-.container-2 {
-	display: flex;
-	width: 100%;
-	flex-direction: row;
-	justify-content: flex-start;
-	flex-wrap: wrap;
-	align-items: flex-start;
-	border: 1px solid rgb(0, 0, 0);
+.items {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    background: #f1f1f1;
 }
+
 
 .item {
-	display: flex;
-	flex-direction: column;
-	background: #ffffff;
-	border: 1px solid rgb(0, 0, 0);
-	padding: 10px;
-	margin: 10px;
-	min-width: 43%;
+    display: flex;
+    flex-direction: column;
+    background: #ffffff;
+    padding: 10px;
+    margin: 10px;
+    min-width: 43%;
 }
 
-.container-3 {
-	display: flex;
-	justify-content: space-between;
-	flex-direction: row;
-	padding: 5px;
-	margin-bottom: 5px;
-	font-size: 20px;
-	font-weight: bold;
-	font-size: 20px;
+.top {
+    display: flex;
+    justify-content: space-between;
+    align-items: normal;
+    flex-direction: row;
+    padding: 5px;
+    margin-bottom: 5px;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .item textarea {
-	font-size: 15px;
-	width: 90%;
-	resize: none;
+    font-size: 15px;
+    width: 90%;
+    resize: none;
+}
+
+
+.menu {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background: lightgray;
+}
+
+.menu a {
+    display: block;
+    font-size: 20px;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.menu a:hover {
+    color: white;
+    background-color: #4CAF50;
+}
+
+.search-container {
+}
+
+.search-container input[type=text] {
+    padding: 6px;
+    margin-top: 8px;
+    font-size: 17px;
+    border: none;
+}
+
+.search-container button {
+    float: right;
+    padding: 6px 10px;
+    margin-top: 8px;
+    margin-right: 16px;
+    background: #ddd;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
+}
+
+.search-container button:hover {
+    background: #ccc;
 }
