add animated sidenav

--- a/src/main/resources/templates/events/events.html
+++ b/src/main/resources/templates/events/events.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="sidenav">
-    <div th:insert="fragments::pages"></div>
+    <div th:insert="fragments::sidenav"></div>
 </div>
 
 <div class="main">
