--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home page</title>
-    <link rel="stylesheet" href="/styles/layout.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+<head th:insert="fragments::headerfiles">
 </head>
+
 <body>
 <div th:insert="fragments::sidenav">
 </div>
-
 <div id="main" class="main">
     <div th:insert="fragments::topnav">
     </div>
@@ -21,7 +16,6 @@
         <i class="fa fa-trash-alt"></i>
     </div>
 </div>
-<script type="application/javascript" src="/js/sidenav.js">
-</script>
+
 </body>
 </html>
