--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,6 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:insert="fragments::headerfiles">
 </head>
+<head>
+    <link rel="stylesheet" href="/styles/content.css">
+</head>
 
 <body>
 <div th:insert="fragments::sidenav">
