add profile page

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -28,7 +28,7 @@
     <div class="block">
         <a sec:authorize="isAnonymous()" href="/login">Login</a>
         <a sec:authorize="isAnonymous()" href="/signup">Sign Up</a>
-        <a sec:authorize="isAuthenticated()" href="/profile">
+        <a sec:authorize="isAuthenticated()" href="/users/profile">
             <i class="fa fa-user"></i> Profile
         </a>
         <a onclick="return confirm('Logout?')"
