--- a/src/main/resources/static/styles/content.css
+++ b/src/main/resources/static/styles/content.css
@@ -2,12 +2,13 @@
 
 .content {
     background: #f1f1f1;
+    min-height: 500px;
 }
 
 .items {
     display: flex;
     width: 100%;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: flex-start;
     flex-wrap: wrap;
     align-items: flex-start;
