--- a/src/main/resources/static/styles/layout.css
+++ b/src/main/resources/static/styles/layout.css
@@ -1,55 +1,17 @@
-
-.sidenav {
-    height: 100%;
-    width: 250px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: cadetblue;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-}
-
-.sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: white;
-    display: block;
-    transition: 0.3s;
-}
-
-.sidenav a:hover {
-    background-color: darkcyan
-}
-
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-}
-
-@media screen and (max-height: 450px) {
-    .sidenav {
-        padding-top: 15px;
-    }
-
-    .sidenav a {
-        font-size: 18px;
-    }
-}
-
 /* Style page content */
+
+body {
+    background-color: #f1f1f1;
+}
+
 .main {
-    margin-left: 260px;
-    padding: 0px 10px;
     display: flex;
     flex-direction: column;
     transition: 0.5s;
+    left: 0;
+    width: 100%;
+    padding: 16px;
+    margin-top: 30px;
 }
 
 .topnav {
@@ -58,6 +20,10 @@
     justify-content: space-between;
     align-items: center;
     background: cadetblue;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 
 .topnav a {
@@ -70,23 +36,66 @@
     transition: 0.3s;
 }
 
-/* Change the link color to #111 (black) on hover */
 .topnav a:hover {
     background-color: darkcyan;
 }
 
-.block {
+.row_block {
     display: flex;
     flex-direction: row;
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-    .sidenav {
-        padding-top: 15px;
-    }
+.column_block {
+    display: flex;
+    flex-direction: column;
+}
 
-    .sidenav a {
-        font-size: 18px;
-    }
+/* Dropdown menu*/
+.dropbtn {
+    background-color: cadetblue;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    transition: 0.5s;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: cadetblue;
+    min-width: 160px;
+    z-index: 1;
+    transition: 0.5s;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: darkcyan;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: darkcyan;
 }
