--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -10,22 +10,18 @@
     </script>
 </head>
 <body>
-<div id="sidenav" class="sidenav" th:fragment="sidenav">
-    <div><a href="/">Home</a></div>
-    <div sec:authenticated="isAuthenticated()">
-        <a href="/events/all">Events</a>
-    </div>
-    <div sec:authorize="hasRole('ADMIN')">
-        <a href="/users/all">Users</a>
-    </div>
-</div>
 
 <div class="topnav" th:fragment="topnav">
-    <div>
-        <a id="openNav" onclick="openNav()" style="display: none"><i class="fa fa-bars"></i></a>
-        <a id="closeNav" onclick="closeNav()"><i class="fa fa-times"></i></a>
+    <div class="dropdown">
+        <button class="dropbtn"><i class="fa fa-bars"></i></button>
+        <div class="dropdown-content">
+            <a href="/">Home</a>
+            <a href="/events/all">Events</a>
+            <a sec:authorize="hasRole('ROLE_ADMIN')" href="/users/all">Users</a>
+        </div>
     </div>
-    <div class="block">
+
+    <div class="row_block">
         <a sec:authorize="isAnonymous()" href="/login">Login</a>
         <a sec:authorize="isAnonymous()" href="/signup">Sign Up</a>
         <a sec:authorize="isAuthenticated()" href="/users/profile">
