profile page modified

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,7 +13,7 @@
 
 <div class="topnav" th:fragment="topnav">
     <div class="dropdown">
-        <button class="dropbtn"><i class="fa fa-bars"></i></button>
+        <button class="dropbtn"><i class="fa fa-bars">  Menu</i></button>
         <div class="dropdown-content">
             <a href="/">Home</a>
             <a href="/events/all">Events</a>
