--- a/src/main/resources/static/styles/profile.css
+++ b/src/main/resources/static/styles/profile.css
@@ -1,12 +1,43 @@
 input {
     pointer-events: none;
+    border: none;
+}
+
+.img_wrap {
+    width: 200px;
+    height: 200px;
+    margin-bottom: 20px;
+}
+
+.img_wrap img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
 }
 
 .card {
     display: flex;
-    flex-direction: column;
-    margin: 20px;
-    border: 1px black solid;
+    flex-direction: row;
+    margin-right: 20px;
     min-height: 70%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    background-color: white;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-bottom: 60px;
+    min-height: 200px;
+}
 
+.card_block {
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 10px;
+    width: 100%;
+    border: 1px solid black;
+}
+
+.t1 {
+    font-weight: bold;
+    font-size: 30px;
 }
