--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -23,10 +23,22 @@
                     <div th:text="${user.username}"></div>
                     <div th:text="${user.email}"></div>
                 </div>
-                <div class="column_block card_block">
-                    <div class="t1" style="align-self: center">My info</div>
-                    <div th:text="${user.name}"></div>
-                    <div th:text="${user.age}"></div>
+                <div class="column_block card_block" style="justify-content: space-between">
+                    <div>
+                        <div th:if="${ready}">
+                            <div class="t1" style="align-self: center">My info</div>
+                            <div th:text="${user.name}"></div>
+                            <div th:text="${user.age}"></div>
+                        </div>
+                        <div th:if="${not_ready}">
+                            You should complete profile info
+                        </div>
+                    </div>
+                    <div>
+                        <form action="/users/profile/edit">
+                            <button class="b1">Edit profile info <i class="fa fa-user"></i></button>
+                        </form>
+                    </div>
                 </div>
             </div>
             <div class="card" style="flex-grow: 3;">
