add entity Profile

--- a/src/main/resources/static/styles/profile.css
+++ b/src/main/resources/static/styles/profile.css
@@ -46,6 +46,8 @@ input {
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
+    text-decoration: none;
+
     border: none;
     cursor: pointer;
     width: 100%;
