--- a/src/main/resources/templates/profile/edit.html
+++ b/src/main/resources/templates/profile/edit.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/styles/sign_form.css">
 </head>
 <body>
-<form id="edit_profile" th:object="${profile}" th:action="@{/users/profile/edit}" method="post"
+<form id="edit_profile" th:object="${profile}" th:action="@{/profile/edit}" method="post"
       onsubmit="return check()">
     <div class="container">
         <div id="error" class="error">
