--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                     <div>
-                        <form action="/users/profile/edit">
+                        <form action="/profile/edit">
                             <button class="b1">Edit profile info <i class="fa fa-user"></i></button>
                         </form>
                     </div>
