add change password

--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -22,6 +22,7 @@
                     </div>
                     <div th:text="${user.username}"></div>
                     <div th:text="${user.email}"></div>
+                    <div><a href="/profile/psw_change">Change password</a></div>
                 </div>
                 <div class="column_block card_block" style="justify-content: space-between">
                     <div>
