--- a/src/main/resources/templates/auth/signup.html
+++ b/src/main/resources/templates/auth/signup.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="/styles/sign_form.css">
 </head>
 <body>
-<form id="signup_form" th:object="${user}" th:action="@{/signup}" method="post"
-      onsubmit="return check()">
-    <div class="container">
+
+<div class="form_wrapper">
+    <form id="signup_form" th:object="${user}" th:action="@{/signup}" method="post"
+          onsubmit="return check()">
         <div id="error" class="error">
             <span th:if="${username_exists}" th:text="${username_exists}"></span>
         </div>
@@ -44,24 +45,24 @@
         </div>
         <button type="submit" value="Sign up">Sign Up</button>
         <a href="/login">Do you have an account? Sign in</a>
-    </div>
-    <script>
-        function check() {
-            let password = document.getElementById('password').value
-            let confirm_passsword = document.getElementById('confirm_password').value
-            let msg = document.getElementById('error')
-            msg.innerText = ''
+    </form>
+</div>
+<script>
+    function check() {
+        let password = document.getElementById('password').value
+        let confirm_passsword = document.getElementById('confirm_password').value
+        let msg = document.getElementById('error')
+        msg.innerText = ''
 
-            if (password != confirm_passsword) {
-                msg.innerHTML = 'Confirm password does not match!'
-                return false
-            } else {
-                msg.innerText = ''
-                return true
-            }
+        if (password != confirm_passsword) {
+            msg.innerHTML = 'Confirm password does not match!'
+            return false
+        } else {
+            msg.innerText = ''
+            return true
         }
-    </script>
-    <script type="application/javascript" src="js/register.js"></script>
-</form>
+    }
+</script>
+<script type="application/javascript" src="js/register.js"></script>
 </body>
 </html>
