--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -39,6 +39,7 @@
     <div>
         <a th:if="${go_home}" href="/">Back to home page</a>
         <a th:if="${go_login}" href="/login">Please, login with your credentialse</a>
+        <a th:if="${go_profile}" href="/login">Go to profile page</a>
     </div>
 </div>
 </body>
