--- a/src/main/resources/templates/profile/edit.html
+++ b/src/main/resources/templates/profile/edit.html
@@ -8,7 +8,7 @@
 <body>
 <form id="edit_profile" th:object="${profile}" th:action="@{/profile/edit}" method="post"
       onsubmit="return check()">
-    <div class="container">
+    <div class="form_wrapper">
         <div id="error" class="error">
         </div>
 
