add css class .wrapper

--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/styles/sign_form.css">
 </head>
 <body>
-<div class="form_wrapper">
+<div class="wrapper">
 
     <div th:if="${param.error}" class="error">Invalid credentials!</div>
     <div th:if="${param.access}" class="error">Access denied!</div>
