--- a/src/main/resources/templates/auth/signup.html
+++ b/src/main/resources/templates/auth/signup.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div class="form_wrapper">
+<div class="wrapper">
     <form id="signup_form" th:object="${user}" th:action="@{/signup}" method="post"
           onsubmit="return check()">
         <div id="error" class="error">
