--- a/src/main/resources/templates/profile/change_password.html
+++ b/src/main/resources/templates/profile/change_password.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div class="form_wrapper">
+<div class="wrapper">
     <form action="/profile/psw_change" method="post"
           onsubmit="return check()">
         <div id="error" class="error">
