fixed forgot password

--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -24,7 +24,7 @@
     </div>
     <div>
         <a th:if="${go_home}" href="/">Back to home page</a>
-        <a th:if="${go_login}" href="/login">Please, login with your credentialse</a>
+        <a th:if="${go_login}" href="/login">Please, login with your credentials</a>
         <a th:if="${go_profile}" href="/login">Go to profile page</a>
     </div>
 </div>
