--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -18,7 +18,8 @@
             <div class="card" style="flex-grow: 1;">
                 <div class="column_block">
                     <div class="img_wrap">
-                        <img src="/img/profile.png">
+                        <img th:if="${image}" th:src="'data:image/jpeg;base64,'+${image}">
+                        <img th:unless="${image}" src="/img/profile.png">
                     </div>
                     <div th:text="${user.username}"></div>
                     <div th:text="${user.email}"></div>
